<resources>
    <string name="app_name">Learning App</string>
    <string name="id_of_the_nation">ID Nation</string>
    <string name="_4512u">4512U</string>
    <string name="nation">Nation</string>
    <string name="usa">USA</string>
    <string name="_2001">2001</string>
    <string name="population">Population</string>
    <string name="year">Year</string>
    <string name="recycler_view">Recycler View</string>
    <string name="learning_app">Learning App</string>
    <string name="activity_life_cycle">Activity Life-Cycle</string>
    <string name="activity_a">Activity A</string>
    <string name="activity_b">Activity B</string>
    <string name="back_button">Go Back</string>
    <string name="fragment_life_cycle">Fragment Life-Cycle</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2_text">Fragment 2</string>

    <string name="fragment_1_text">Fragment 1</string>
    <string name="sharedpref">SharedPref</string>
    <string name="sharedprefToolbar">SharedPref</string>
    <string name="broadcast_receiver">BroadcastReceiver</string>
    <string name="toast_info_text">Turn On/Off flight mode to see the toast</string>
    <string name="view_pager">View Pager</string>
    <string name="onboarding_first_screen">OnBoarding First Screen</string>
    <string name="result">Result</string>
    <string name="mvvm">Mvvm</string>
    <string name="simple_calculator_using_mvvm_architecture">Simple Calculator Using MVVM Architecture</string>
    <string name="result_">Result</string>
    <string name="activity_a_please_check_the_log_to_get_the_current_status_of_the_activity">Activity A , Please Check The Log to get the Current Status of the Activity</string>
    <string name="sample">sample</string>
    <string name="next">Next</string>
    <string name="get_start">Get Start</string>

    <!--    Live Data Test String Resources-->
    <string name="update_btn_textView_text">Update</string>
    <string name="textView_live_data">Live Data TextView</string>
    <string name="livedata_textView_text">LiveData</string>
    <string name="retrofit_mvvm">Retrofit + MVVM</string>


    <!--    Other string for userInfo-->
    <string name="broadcast_listener_info_text">Activity To ShowCase how the Broadcast Listener Works</string>
    <string name="viewpage_info_text">Activity To ShowCase Working of ViewPager</string>
    <string name="livedata_using_mvvm_page_info_text">Activity to showCase the implementation of LiveData using Mvvm model</string>
    <string name="retrofit_page_info_text">Activity To ShowCase how to fetch Data using Retrofit + MVVM check log : ApiData : as of now</string>
    <string name="activity_to_showcase_the_sharedpref_and_use_of_application_class_for_global_declaration">Activity to showCase the SharedPref and use of Application class for Global declaration</string>
    <string name="room_database">Room Database</string>
    <string name="activity_to_showcase_roomdatabase_check_log_roomdata_as_of_now">Activity To showCase RoomDatabase , check log : RoomData : as of now</string>


    <!--String resource of RandomUser Api Data -->
    <string name="name_of_user">Name</string>
    <string name="email_of_user">Email</string>
    <string name="location_of_user">Location</string>
    <string name="phone_number_of_user">Phone</string>
    <string name="dob_of_user">Dob</string>
    <string name="gender_of_user">Gender</string>
    <string name="id_for_room_db">id</string>
    <string name="btn_check_storage_permission_text">Check Storage Permission</string>
    <string name="btn_check_audio_permission_text">Check Audio Permission</string>
    <string name="btn_check_notification_permission_text">Check Notification Permission</string>
    <string name="btn_check_camera_permission_text">Check Camera Permission</string>
    <string name="bt_permission_handling_text">Permission Handling</string>
    <string name="bt_coroutines_text">Coroutines</string>
    <string name="btn_create_pdf_text">Create Pdf</string>
    <string name="bt_select_images_from_gallery_text">Select Images From Gallery</string>
    <string name="bt_view_pdf_text">View Pdf</string>
    <string name="pdfCreation_toolbar_text">Pdf Generator</string>
    <string name="save_pdf">Save Pdf</string>
    <string name="save_pdf_txt">Save Pdf</string>
    <string name="bt_shimmer_effect_txt">Shimmer Effect</string>
    <string name="bg_image">bg Image</string>
    <string name="text_subHeading">lets start the day with meditation</string>
    <string name="good_morning">Good Morning !</string>
    <string name="see_my_statistics">See My statistics</string>
    <string name="you_ve_finished_the_meditation">You\'ve finished the Meditation !</string>
    <string name="todo">TODO</string>
    <string name="become_as_calm_as_cat">Become As Calm As Cat</string>
    <string name="_21_min">21 Min</string>
    <string name="choose_by_your_mood">Choose by your mood</string>
    <string name="calm_img">calm Img</string>
    <string name="calm">Calm</string>
    <string name="curious">Curious</string>
    <string name="sleepy">Sleepy</string>
    <string name="anxious">anxious</string>
    <string name="bt_side_navigation_bar_txt">Side and Bottom NavBar</string>
    <string name="bt_lottieanimation_txt">LottieAnimation</string>
    <string name="click_on_add_icon_to_upload_image">Click on add icon to upload image</string>
    <string name="random_long_text">India is a land of incredible diversity, rich in history, culture, and natural beauty. From the towering Himalayas in the north to the serene backwaters of Kerala in the south, the country is a tapestry of vibrant landscapes and traditions. India is known for its spiritual heritage, being the birthplace of major religions like Hinduism, Buddhism, Jainism, and Sikhism. Its cities buzz with life, from the bustling streets of Mumbai to the historic lanes of Delhi. The cuisine is as varied as the country itself, with each region offering its own unique flavors and dishes, from spicy curries to sweet delicacies. Festivals like Diwali, Holi, and Eid are celebrated with great fervor, bringing people together in a spirit of joy and unity. India\'s economy is one of the fastest-growing in the world, with a burgeoning tech industry and a rich tradition of craftsmanship. Despite the challenges it faces, India continues to be a land of innovation, creativity, and resilience, where ancient traditions and modern aspirations blend seamlessly. /n India is a land of incredible diversity, rich in history, culture, and natural beauty. From the towering Himalayas in the north to the serene backwaters of Kerala in the south, the country is a tapestry of vibrant landscapes and traditions. India is known for its spiritual heritage, being the birthplace of major religions like Hinduism, Buddhism, Jainism, and Sikhism. Its cities buzz with life, from the bustling streets of Mumbai to the historic lanes of Delhi. The cuisine is as varied as the country itself, with each region offering its own unique flavors and dishes, from spicy curries to sweet delicacies. Festivals like Diwali, Holi, and Eid are celebrated with great fervor, bringing people together in a spirit of joy and unity. India\'s economy is one of the fastest-growing in the world, with a burgeoning tech industry and a rich tradition of craftsmanship. Despite the challenges it faces, India continues to be a land of innovation, creativity, and resilience, where ancient traditions and modern aspirations blend seamlessly.</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_there_nwelcome_to_you">Hello There ! \nWelcome to you.</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_city">Enter your City</string>
    <string name="submit">Submit</string>
    <string name="by_click_on_submit_you_are_agree_with_nterms_and_conditions">By Click on Submit you are agree with\nTerms and Conditions</string>
</resources>