<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityLifeCycle.ActivityLifeCycle">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btActivityA"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/activity_a"
        app:layout_constraintBottom_toTopOf="@+id/btActivityB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btActivityB"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/activity_b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btActivityA"
        app:layout_constraintStart_toStartOf="@+id/btActivityA"
        app:layout_constraintTop_toBottomOf="@+id/btActivityA" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btBack"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/back_button"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>