<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".liveData.view.MainView">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/livedata_using_mvvm_page_info_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtView_liveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_live_data"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_Update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_btn_textView_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtView_liveData"
        app:layout_constraintStart_toStartOf="@+id/txtView_liveData"
        app:layout_constraintTop_toBottomOf="@+id/txtView_liveData" />
</androidx.constraintlayout.widget.ConstraintLayout>