<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.SignInWithPhoneNumber">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="#AE0105"
        android:layout_marginTop="70dp"
        android:layout_marginStart="50dp"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_there_nwelcome_to_you"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_SignUp"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/enter_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/textView_description">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/enter_your_name"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutPhoneNumber">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/enter_your_city"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutName">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_city"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:maxLength="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#EB8D8D"
        android:layout_margin="40dp"
        app:cardElevation="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/bt_Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="#000000"
            android:backgroundTint="#EB8D8D"
            style="@style/MediumFont16"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_description1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/by_click_on_submit_you_are_agree_with_nterms_and_conditions"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:textStyle="italic|bold"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>