<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/random_user_item_cardBg"
        app:cardElevation="10dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/name_of_user"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/txt_Email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtView_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_Name"
                app:layout_constraintBottom_toBottomOf="@id/txt_Name"
                app:layout_constraintTop_toTopOf="@id/txt_Name"
                tools:layout_editor_absoluteX="216dp" />

            <TextView
                android:id="@+id/txt_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/email_of_user"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_Name"
                app:layout_constraintBottom_toTopOf="@id/txt_Gender"/>

            <TextView
                android:id="@+id/txtView_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_Email"
                app:layout_constraintBottom_toBottomOf="@id/txt_Email"
                app:layout_constraintTop_toTopOf="@id/txt_Email"
                tools:layout_editor_absoluteX="216dp" />

            <TextView
                android:id="@+id/txt_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/gender_of_user"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_Email"
                app:layout_constraintBottom_toTopOf="@id/txt_Location"/>

            <TextView
                android:id="@+id/txtView_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_Gender"
                app:layout_constraintBottom_toBottomOf="@id/txt_Gender"
                app:layout_constraintTop_toTopOf="@id/txt_Gender"
                tools:layout_editor_absoluteX="216dp" />

            <TextView
                android:id="@+id/txt_Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/location_of_user"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txt_Phone"
                app:layout_constraintTop_toBottomOf="@id/txt_Gender" />

            <TextView
                android:id="@+id/txtView_Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_Location"                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/txt_Location"
                app:layout_constraintTop_toTopOf="@id/txt_Location"
                tools:layout_editor_absoluteX="216dp" />

            <TextView
                android:id="@+id/txt_Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/phone_number_of_user"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_Location"
                app:layout_constraintBottom_toTopOf="@id/txt_Dob"/>

            <TextView
                android:id="@+id/txtView_Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginStart="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_Phone"
                app:layout_constraintBottom_toBottomOf="@id/txt_Phone"
                app:layout_constraintTop_toTopOf="@id/txt_Phone"
                tools:layout_editor_absoluteX="216dp" />

            <TextView
                android:id="@+id/txt_Dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/dob_of_user"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_Phone"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/txtView_Dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_Dob"                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/txt_Dob"
                app:layout_constraintTop_toTopOf="@id/txt_Dob"
                tools:layout_editor_absoluteX="216dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>