<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/random_user_item_cardBg"
        app:cardElevation="10dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

           <androidx.constraintlayout.widget.Barrier
               android:id="@+id/barrier"
               android:layout_width="1dp"
               android:layout_height="match_parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               android:orientation="horizontal"/>

            <TextView
                android:id="@+id/txt_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/id_of_the_nation"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/txt_Email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtView_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toTopOf="@id/txt_Name"
                app:layout_constraintBottom_toBottomOf="@id/txt_Name"/>

            <TextView
                android:id="@+id/txt_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/nation"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_Name"
                app:layout_constraintBottom_toTopOf="@id/txt_Gender"/>

            <TextView
                android:id="@+id/txtView_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toTopOf="@id/txt_Email"
                app:layout_constraintBottom_toBottomOf="@id/txt_Email"/>

            <TextView
                android:id="@+id/txt_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/year"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_Email"
                app:layout_constraintBottom_toTopOf="@id/txt_Location"/>

            <TextView
                android:id="@+id/txtView_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toTopOf="@id/txt_Gender"
                app:layout_constraintBottom_toBottomOf="@id/txt_Gender"/>

            <TextView
                android:id="@+id/txt_Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/population"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_Gender"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/txtView_Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toTopOf="@id/txt_Location"
                app:layout_constraintBottom_toBottomOf="@id/txt_Location"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
